--- a/app/templates/theme3/layout.html
+++ b/app/templates/theme3/layout.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title>Adianti Template III</title>
+    <title>Reservas - Pousada Santa Rita</title>
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <link rel="manifest" href="manifest.json?appver=700">
@@ -63,17 +63,17 @@
 
       <header class="main-header">
         <!-- Logo -->
-        <a href="http://www.adianti.com.br/framework" target="newwindow" class="logo">
+        <a href="index.php?class=SystemAdministrationDashboard" target="newwindow" class="logo">
           <!-- mini logo for sidebar mini 50x50 pixels -->
-          <span class="logo-mini"><b>AT</b>3</span>
+          <span class="logo-mini"><b>PS</b></span>
           <!-- logo for regular state and mobile devices -->
-          <span class="logo-lg"><b>Adianti</b>Template III</span>
+          <span class="logo-lg"><b>Pousada</b> Santa Rita</span>
         </a>
         <!-- Header Navbar: style can be found in header.less -->
         <nav class="navbar navbar-static-top" role="navigation">
           <!-- Sidebar toggle button-->
           <a href="#" class="sidebar-toggle" data-toggle="offcanvas" role="button">
-            <span class="sr-only">Toggle navigation</span>
+            <span class="sr-only">Menu</span>
             <span class="icon-bar"></span>
             <span class="icon-bar"></span>
             <span class="icon-bar"></span>
@@ -148,7 +148,7 @@
           <!-- /.search form -->
           <!-- sidebar menu: : style can be found in sidebar.less -->
           <ul class="sidebar-menu">
-          <li class="header">MAIN NAVIGATION</li>
+          <li class="header">MENU PRINCIPAL</li>
           </ul>
           {MENU}
         </section>
@@ -170,7 +170,7 @@
       </div><!-- /.content-wrapper -->
       <footer class="main-footer">
         <div class="pull-right hidden-xs">
-          <b>Version</b> x.y.z
+          <b>Versão</b> 0.0.1
         </div>
         <strong>{userunitid} - {userunitname}</strong>
         <!--[IFADMIN]-->
