--- a/app/templates/theme3/login.html
+++ b/app/templates/theme3/login.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title>Adianti Template III</title>
+    <title>Pousada Santa Rita</title>
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <link rel="manifest" href="manifest.json?appver=700">
@@ -21,7 +21,7 @@
   </head>
   <body>
         <nav class="main-header navbar navbar-light bg-light fixed-top" role="navigation" style="margin-bottom: 0; text-align:center">
-            <a class="navbar-brand" href="http://www.adianti.com.br/framework">Adianti Framework ERP Template III</a>
+            <a class="navbar-brand" href="http://www.adianti.com.br/framework">Pousada Santa Rita</a>
         </nav>
         
         <div id="wrapper" style="width:90%;margin:auto;margin-top:10px">
