--- a/app/templates/theme3/layout.html
+++ b/app/templates/theme3/layout.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+﻿<!DOCTYPE html>
 <html>
   <head>
     <title>Reservas - Pousada Santa Rita</title>
@@ -58,7 +58,7 @@
     </script>
   </head>
   
-  <body class="hold-transition skin-blue sidebar-mini">
+  <body class="hold-transition skin-green sidebar-mini">
     <div class="wrapper">
 
       <header class="main-header">
@@ -134,16 +134,17 @@
         <section class="sidebar">
           <!-- Sidebar user panel -->
           <div class="user-panel">
-            <div class="pull-left image">
+            <div class="pull-left image" style="width: 40px;">
               <!-- <i class="fa fa-user fa-2x" style="color:white"></i> -->
               <img src="app/images/photos/{login}.jpg" onError="this.onerror=null;this.src='app/templates/{template}/img/avatar5.png';" style="border-radius:50%;margin-top:10px" alt="User" />
             </div>
-            <div class="pull-left info" style="position:initial">
+            <div class="pull-left info" style="font-size: 12px;">
             <br>
               <p>{username}</p>
-              <span style="font-size:10pt">{usermail}</span>
+              <span>{usermail}</span>
             </div>
           </div>
+          <br>
           <!-- search form -->
           <!-- /.search form -->
           <!-- sidebar menu: : style can be found in sidebar.less -->
