adjustes in more ten class

--- a/app/templates/theme3/layout.html
+++ b/app/templates/theme3/layout.html
@@ -20,7 +20,9 @@
     <link href="app/templates/{template}/css/AdminLTE.min.css" rel="stylesheet" type="text/css" media="screen">
     <link href="app/templates/{template}/css/skins/_all-skins.min.css" rel="stylesheet" type="text/css" media="screen">
     <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
-
+    
+    <link href="app/templates/{template}/custom.css" rel="stylesheet" type="text/css" media="screen">
+    
     <script>
         function update_messages_menu() {
             $.get('engine.php?class=MessageList&theme=theme3', function(data) {
