--- a/app/templates/theme3/layout.html
+++ b/app/templates/theme3/layout.html
@@ -1,13 +1,13 @@
 ﻿<!DOCTYPE html>
 <html>
   <head>
-    <title>Reservas - Pousada Santa Rita</title>
+    <title>Pousada Santa Rita</title>
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <link rel="manifest" href="manifest.json?appver=700">
     <!-- Tell the browser to be responsive to screen width -->
     <meta content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no" name="viewport">
-    <!-- <link rel="apple-touch-icon" sizes="180x180" href="tmp/psrita.png"> -->
+    <link rel="apple-touch-icon" sizes="180x180" href="tmp/96x96.png">
     <link rel="icon" type="imagem/png" href="tmp/96x96.png" />
     <meta name="apple-mobile-web-app-capable" content="yes">
     <meta name="apple-mobile-web-app-status-bar-style" content="default">
