--- a/app/templates/theme3/login.html
+++ b/app/templates/theme3/login.html
@@ -8,8 +8,8 @@
     <link rel="manifest" href="manifest.json?appver=700">
     <!-- Tell the browser to be responsive to screen width -->
     <meta content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no" name="viewport">
-    <!-- <link rel="apple-touch-icon" sizes="180x180" href="tmp/psrita.png"> -->
     <link rel="icon" type="imagem/png" href="tmp/96x96.png" />
+    <link rel="apple-touch-icon" sizes="180x180" type="imagem/png" href="tmp/96x96.png" />
     <meta name="apple-mobile-web-app-capable" content="yes">
     <meta name="apple-mobile-web-app-status-bar-style" content="default">
 
